# dagmar-monorepo

./: .editorconfig  .env.example  .gitignore  AGENTS.md  AUDIT_SOURCE_CODE_FORENSIC.md  README.md  alembic.ini  api-contract.md  gunicorn.conf.py  package.json  pyproject.toml
app/: __init__.py  config.py  logging_conf.py  main.py
backend/: .gitignore  AGENTS.md  README.md  audit dagmar-backend.md  pyproject.toml
backend/.github/workflows/: ci-cd.yml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: admin_attendance.py  admin_export.py  admin_instances.py  admin_settings.py  admin_shift_plan.py  admin_users.py  attendance.py  integration.py  portal_auth.py  shift_plan.py
backend/app/brand/: brand.py
backend/app/db/: alembic.ini  models.py  schema_bootstrap.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 2026_01_20_0002_instance_templates_deactivate_settings.py  2026_02_03_0004_add_profile_instance_link.py  2026_02_16_0006_backfill_portal_users_from_attendance.py  2026_02_21_0007_add_phone_to_portal_users.py  2026_03_13_0008_add_attendance_reminder_events.py  2026_03_25_0010_add_auth_lockout_tables.py
backend/app/security/: crypto.py  rate_limit.py
backend/app/services/: __init__.py  integration_admin.py
backend/app/utils/: slugify.py
backend/docs/integration-api/: README.md  admin-operations.md  endpoints.md  examples.md  pagination-and-limits.md
backend/docs/regen/00-forensics/: PULS-audit-2026-02-20.md
backend/scripts/: manage_integrations.py
backend/tests/: test_admin_integrations.py  test_admin_users_smoke.py  test_alembic_revision_chain.py  test_forbidden_domain.py  test_integration_api.py  test_schema_bootstrap.py
(+337 files in other folders)
