[project]
name = "dagmar-backend"
version = "1.0.0"
description = "DAGMAR docházkový systém – backend (FastAPI) pro doménu dagmar.hcasc.cz"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "HCASC" }]

dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.27.0,<1.0.0",
  "gunicorn>=21.2.0,<23.0.0",

  "SQLAlchemy>=2.0.25,<3.0.0",
  "alembic>=1.13.1,<2.0.0",
  "psycopg[binary]>=3.1.17,<4.0.0",

  "pydantic>=2.6.0,<3.0.0",
  "pydantic-settings>=2.2.0,<3.0.0",

  "python-multipart>=0.0.9,<1.0.0",

  # password hashing
  "argon2-cffi>=23.1.0,<24.0.0",

  # signed cookies / sessions
  "itsdangerous>=2.1.2,<3.0.0",

  # rate limiting
  "slowapi>=0.1.9,<1.0.0",

  # misc
  "python-dateutil>=2.9.0.post0,<3.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "httpx>=0.26.0,<1.0.0",
  "cryptography>=48.0.1,<49.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0,<1.0.0",
  "mypy>=1.8.0,<2.0.0",
  "pytest>=9.0.3,<10.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["slowapi", "slowapi.*", "passlib", "passlib.*", "httpx", "httpx.*"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling>=1.21.0,<2.0.0"]
build-backend = "hatchling.build"
